# bifrost

./: .gitignore  CHANGELOG.md  README.md  cli.py  docker-compose.yml  pyproject.toml
bifrost/: main.py
bifrost/core/: driver.py  orm.py  release.py  service.py
bifrost/model/data_contracts/: contract.py  contract_fundamentals.py  contract_schema.py  contract_schema_property.py  contract_servers.py  data_contract_commons.py
bifrost/model/polyglot/: persistence_config.py
bifrost/persistence/: object_storage.py  postgres_connector.py
polyglot/: polyglot.py
polyglot/core/: driver.py  shared_model.py
polyglot/model/: custom.py  database_config.py  enums.py  object_storage_config.py  polyglot_config.py  polyglot_entity.py
polyglot/persistence/: postgres_connector.py  quack_connector.py
